--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,4 +5,22 @@
          version="3.1"
          metadata-complete="true">
     <!-- 用maven 创建的项目需要修改 servlet 版本为 3.1 -->
+    <!-- 配置 DispatcherServlet -->
+    <servlet>
+        <servlet-name>seckill-dispatcher</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <!-- 配置springMVC需要加载的配置文件
+             spring-dao.xml，spring-service.xml，spring-web.xml
+             Mybatis -> spring -> springMVC
+        -->
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>classpath:spring/spring-*.xml</param-value>
+        </init-param>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>seckill-dispatcher</servlet-name>
+        <!-- 默认匹配所有的请求-->
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
 </web-app>
