--- a/pom.xml
+++ b/pom.xml
@@ -148,7 +148,23 @@
       <artifactId>spring-test</artifactId>
       <version>4.1.9.RELEASE</version>
     </dependency>
-
+    <!-- redis 客户端:Jedis -->
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>2.9.0</version>
+    </dependency>
+    <!-- protostuff序列化依赖 -->
+    <dependency>
+      <groupId>com.dyuproject.protostuff</groupId>
+      <artifactId>protostuff-core</artifactId>
+      <version>1.0.8</version>
+    </dependency>
+    <dependency>
+      <groupId>com.dyuproject.protostuff</groupId>
+      <artifactId>protostuff-runtime</artifactId>
+      <version>1.0.8</version>
+    </dependency>
     <!--单元测试-->
     <dependency>
       <groupId>junit</groupId>
